--- a/app/views/application/_navigation_main.html.slim
+++ b/app/views/application/_navigation_main.html.slim
@@ -1,5 +1,5 @@
 .top-bar-left
   ul.menu
-    li = link_to "AllBlogs", root_path
+    = active_link_to "AllBlogs", root_path, active: :exclusive, wrap_tag: :li
     - if user_signed_in?
       = active_link_to "MyBlogs", user_root_path, active: :exclusive, wrap_tag: :li
