--- a/app/views/user_blogs/index.html.slim
+++ b/app/views/user_blogs/index.html.slim
@@ -1,28 +1,22 @@
-.row
-  .columns
-    h1 #{current_user.full_name} blogs
+.column-row
+  h1 #{current_user.full_name} blogs
 
-.row
-  .medium-5.columns
-    - if blogs.empty?
-        p No blogs
-    - else
-      table
-        thead
-          tr
-            th Subject
-            th Posts count
 
-        tbody
-          - blogs.each do |blog|
-            tr
-              td = link_to blog.subject, blog
-              td = blog.posts_count
-              td = link_to "Edit", edit_blog_path(blog)
-              td = link_to "Destroy", blog, method: :delete
+- if blogs.empty?
+  .column-row
+    .create_button
+      = link_to "Create your first blog", new_user_blog_path(current_user), class: "button7"
+-else
+  .column-row
+    .blog-list
+      - blogs.each do |blog|
+        .blog
+          h2 = link_to blog.subject, blog
+          li  Created time: #{blog.formatted_created_at}
+          p = link_to "Edit", edit_blog_path(blog)
+          p = link_to "Destroy", blog, method: :delete
+          hr
 
-  .medium-5.medium-offset-1.columns.end
-    - if blogs.empty?
-      = link_to "Create your first blog", new_user_blog_path(current_user)
-    - else
-      = link_to "New Blog", new_user_blog_path(current_user)
+      .column-row
+        .create_button
+          = link_to "New Blog", new_user_blog_path(current_user), class: "button7"
