--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -10,31 +10,10 @@
         p = link_to "Edit", edit_post_path(post)
         p = link_to "Destroy", post, method: :delete
 
+
     h2 Comments
-    - if comments.empty?
-      p No comments here
-    - else
-      - comments.each do |comment|
-        .comment-view
-          p = comment.body
-          p By user: #{comment.user_email}
-          - if policy(comment).manage?
-            =link_to "Delete comment", [comment.post, comment], method: :delete
-          .comment-time
-            li = comment.formatted_created_at
-          hr
+    = render("comments/discussion", comments: comments, comment: comment)
 
-- if user_signed_in?
-  .column-row
-    h1 Add a comment:
-    .comment
-      = simple_form_for [post, comment] do |f|
-        = f.error_notification
 
-        .form-inputs
-          = f.input :body
-
-        .form-actions
-          = f.button :submit, class: "button7"
 
 
